[project]
name = "gelslim-shear-sharing"
version = "0.1.0"
description = "Material to share gelslim shear"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gsw>=3.6.19",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pyqt5>=5.15.11",
    "scikit-image>=0.25.2",
    "torch>=2.6.0",
]
